# Linly-Talker-Stream

./: .gitignore  FAQ.md  LICENSE  NOTICE  README.md  README_zh.md  pyproject.toml
config/: config.yaml  config_ernerf.yaml  config_musetalk.yaml  config_talkinggaussian.yaml  config_wav2lip.yaml  prompt.txt  prompt_en.txt
scripts/: create_ssl_certs.sh  download_musetalk_weights.sh  post_musetalk_install.sh  setup-env.sh  start-all.sh  start-backend.sh  start-frontend.sh
src/: __init__.py
src/asr/: __init__.py  base.py  factory.py
src/asr/engines/: __init__.py  funasr.py  whisper.py
src/avatars/: __init__.py  audio_stream_handler.py  base.py  factory.py
src/avatars/ernerf/: audio_stream_handler.py  avatar.py
src/avatars/musetalk/: __init__.py  audio_stream_handler.py  avatar.py  genavatar_musetalk.py  pyproject.toml
src/avatars/musetalk/utils/: preprocessing.py  utils.py
src/avatars/musetalk/utils/face_parsing/: __init__.py
src/avatars/talkinggaussian/: audio_stream_handler.py  avatar.py  encoding.py  pyproject.toml
src/avatars/talkinggaussian/arguments/: __init__.py
src/avatars/talkinggaussian/gaussian_renderer/: __init__.py
src/avatars/talkinggaussian/gridencoder/: setup.py
src/avatars/talkinggaussian/scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py  motion_net.py
src/avatars/talkinggaussian/submodules/simple-knn/: .gitignore
src/avatars/talkinggaussian/utils/: camera_utils.py
src/avatars/ultralight/: __init__.py  audio_stream_handler.py  avatar.py  genavatar-bak.py
src/avatars/wav2lip/: __init__.py  audio_stream_handler.py  avatar.py  genavatar.py  pyproject.toml
src/config/: defaults.py  loader.py  schema.py
src/llm/: __init__.py  base.py  factory.py  service.py
src/llm/engines/: __init__.py  openai.py
src/server/: app.py  server.py  state.py  utils.py
src/server/routes/: __init__.py  audio.py  chat.py  health.py  video.py  webrtc.py
src/tts/: base.py  factory.py
src/tts/engines/: __init__.py  azure.py  cosyvoice.py  cosyvoice_api.py  doubao.py  edge.py  fish.py  indextts2.py  sovits.py  tencent.py  xtts.py
src/utils/: logging.py  paths.py  webrtc.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.vue  main.js
web/src/components/: DebugPanel.vue  InteractionPanel.vue  SettingsPanel.vue  VideoPlayer.vue  VoiceRecorder.vue
web/src/composables/: useI18n.js  useSpeechRecognition.js  useWebRTC.js
web/src/locales/: en-US.js  zh-CN.js
