[project]
name = "linly-talker-stream-talkinggaussian"
version = "0.1.0"
description = "Linly-Talker-Stream with TalkingGaussian engine (3D)"
requires-python = ">=3.10, <3.12"
license = "Apache-2.0"
authors = [
    { name = "Kedreamix", email = "kedreamix@gmail.com" }
]

dependencies = [
    # 仅保留 avatar 及子模块实际 import 的库
    "av>=14.0.0",
    "numpy>=1.23,<2",
    "opencv-python>=4.8.0,<4.12",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "plyfile>=0.8.0",
    "torch==2.5.0",
    "torchvision",
    "torchaudio",
    "tqdm>=4.67.0",
    "transformers==4.46.0",
    "setuptools==69.5.1",
    "wheel==0.46.3",
]

[tool.setuptools.packages.find]
include = ["arguments*", "gaussian_renderer*", "gridencoder*", "scene*", "submodules*", "utils*"]

[tool.setuptools]
py-modules = ["__init__", "audio_stream_handler", "avatar", "encoding"]
